plugins {
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java'
    id 'groovy'
    id "com.github.ben-manes.versions" version "0.46.0"
}

group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

jar {
    enabled = false
}

repositories {
    mavenLocal()
    repositories {
        maven {
            url "https://repo.fintlabs.no/releases"
        }
    }
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.93.Final:osx-aarch_64'
    implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
    implementation 'org.springframework.kafka:spring-kafka'
    productionRuntimeClasspath "org.glassfish.jaxb:jaxb-runtime:2.3.8"
    implementation 'org.springdoc:springdoc-openapi-webflux-ui:1.7.0'

    runtimeClasspath "org.glassfish.jaxb:jaxb-runtime:4.0.3"

    implementation 'no.fint:fint-event-model:3.0.2'
    implementation 'no.fintlabs:fint-core-infra-models:1.1.0-rc-2'
    implementation 'no.fintlabs:fint-kafka:2.4.0'
    implementation 'no.fintlabs:fint-resource-server-security:1.1.1-rc-2'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    compileOnly "com.sun.xml.ws:jaxws-rt:4.0.1"
    compileOnly "org.glassfish.jaxb:jaxb-runtime:4.0.3"
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation "org.glassfish.jaxb:jaxb-runtime:4.0.3"
    testImplementation 'cglib:cglib-nodep:3.3.0'
    testImplementation "com.sun.xml.ws:jaxws-rt:4.0.1"
    testImplementation 'org.spockframework:spock-spring:2.3-groovy-4.0'
    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
}

test {
    useJUnitPlatform()
}
